[tool.poetry]
name = "fail2ban_exporter"
version = "0.1.0"
description = ""
authors = ["LifetimeMistake <57274704+LifetimeMistake@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
prometheus-client = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
